--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -1,22 +1,63 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
-  <!--   See Using Zendesk Garden:
-    https://developer.zendesk.com/apps/docs/developer-guide/setup#using-zendesk-garden
-    https://garden.zendesk.com/css-components/bedrock/
-    https://garden.zendesk.com/css-components/utilities/typography/
-   -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/combine/npm/@zendeskgarden/css-bedrock@7.0.21,npm/@zendeskgarden/css-utilities@4.3.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <h2 class="u-semibold u-fs-xl">Hello, World!</h2>
-  <script src="https://static.zdassets.com/zendesk_app_framework_sdk/2.0/zaf_sdk.min.js"></script>
-  <script>
-    // Initialise Apps framework client. See also:
-    // https://developer.zendesk.com/apps/docs/developer-guide/getting_started
+  <div id="container">
+
+    <h1 id="title">Consulta CEP</h1>
+    <form action="." method="get" class="form-cep">
+      <div class="form-item">
+        <label for="cep" id="label">Digite o CEP:</label>
+        <input type="text" name="cep" id="cep" required />
+      </div>
+      <div>
+        <input type="submit" value="Pesquisar" id="search">
+      </div>
+    </form>
+
+    <div id="results">
+      <div class="result">
+        <p>CEP: </p>
+        <p class="result-text" id="cep-text"></p>
+      </div>
+      <div class="result">
+        <p>Logradouro: </p>
+        <p class="result-text" id="logradouro-text"></p>
+      </div>
+      <div class="result">
+        <p>Complemento: </p>
+        <p class="result-text" id="complemento-text"></p>
+      </div>
+      <div class="result">
+        <p>Bairro: </p>
+        <p class="result-text" id="bairro-text"></p>
+      </div>
+      <div class="result">
+        <p>Localidade: </p>
+        <p class="result-text" id="localidade-text"></p>
+      </div>
+      <div class="result">
+        <p>UF: </p>
+        <p class="result-text" id="uf-text"></p>
+      </div>
+    </div>
+
+  </div>
+
+  <script src="script.js"></script>
+  <!-- <script src="https://static.zdassets.com/zendesk_app_framework_sdk/2.0/zaf_sdk.min.js"></script> -->
+  <!-- <script>
     var client = ZAFClient.init();
     client.invoke('resize', { width: '100%', height: '200px' });
-  </script>
+  </script> -->
 </body>
+
 </html>
