--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -10,7 +11,7 @@
 </head>
 
 <body>
-  <div id="container">
+  <div ng-app="app" ng-controller="app" id="container">
 
     <h1 id="title">Consulta CEP</h1>
     <form action="." method="get" class="form-cep">
@@ -19,7 +20,7 @@
         <input type="text" name="cep" id="cep" required />
       </div>
       <div>
-        <input type="submit" value="Pesquisar" id="search">
+        <button type="submit" ng-disabled="disableInputs" ng-click="pesquisaCEP()" id="search">Pesquisar</button>
       </div>
     </form>
 
@@ -52,12 +53,10 @@
 
   </div>
 
-  <script src="script.js"></script>
-  <!-- <script src="https://static.zdassets.com/zendesk_app_framework_sdk/2.0/zaf_sdk.min.js"></script> -->
-  <!-- <script>
-    var client = ZAFClient.init();
-    client.invoke('resize', { width: '100%', height: '200px' });
-  </script> -->
+  <script src="app.js" type="text/javascript"></script>
+  <script src="controllers/app.controller.js" type="text/javascript"></script>
+  <script src="service/zendesk.service.js"></script>
+  <script src="https://static.zdassets.com/zendesk_app_framework_sdk/2.0/zaf_sdk.min.js"></script>
 </body>
 
 </html>
