--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -10,45 +10,27 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-  <div ng-app="app" ng-controller="app" id="container">
+<body ng-app="app" ng-controller="AppController">
+  <div id="container">
 
     <h1 id="title">Consulta CEP</h1>
-    <form action="." method="get" class="form-cep">
+    <form ng-submit="pesquisaCEP()">
       <div class="form-item">
         <label for="cep" id="label">Digite o CEP:</label>
-        <input type="text" name="cep" id="cep" required />
+        <input type="text" ng-model="cep" id="cep" required />
       </div>
       <div>
-        <button type="submit" ng-disabled="disableInputs" ng-click="pesquisaCEP()" id="search">Pesquisar</button>
+        <button type="submit" id="search">Pesquisar</button>
       </div>
     </form>
 
-    <div id="results">
-      <div class="result">
-        <p>CEP: </p>
-        <p class="result-text" id="cep-text"></p>
-      </div>
-      <div class="result">
-        <p>Logradouro: </p>
-        <p class="result-text" id="logradouro-text"></p>
-      </div>
-      <div class="result">
-        <p>Complemento: </p>
-        <p class="result-text" id="complemento-text"></p>
-      </div>
-      <div class="result">
-        <p>Bairro: </p>
-        <p class="result-text" id="bairro-text"></p>
-      </div>
-      <div class="result">
-        <p>Localidade: </p>
-        <p class="result-text" id="localidade-text"></p>
-      </div>
-      <div class="result">
-        <p>UF: </p>
-        <p class="result-text" id="uf-text"></p>
-      </div>
+    <div id="results" ng-if="cepData">
+      <p class="result">CEP: {{ cepData.cep }}</p>
+      <p class="result">Logradouro: {{ cepData.logradouro }}</p>
+      <p class="result">Complemento: {{ cepData.complemento }}</p>
+      <p class="result">Bairro: {{ cepData.bairro }}</p>
+      <p class="result">Cidade: {{ cepData.localidade }}</p>
+      <p class="result">Estado: {{ cepData.uf }}</p>
     </div>
 
   </div>
