change input to text

--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -17,7 +17,7 @@
       <form ng-submit="pesquisaCEP()">
         <div class="form-item">
           <label for="cep" id="label">Digite o CEP:</label>
-          <input type="number" ng-model="cep" id="cep" placeholder="Apenas números" required />
+          <input type="text" ng-model="cep" id="cep" placeholder="Apenas números" required />
         </div>
         <div>
           <button type="submit" id="search">Pesquisar</button>
